--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "@babel/node": "^7.6.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@hapi/boom": "^7.4.3",
+    "@hapi/good": "^8.2.2",
+    "@hapi/good-squeeze": "^5.2.1",
     "@hapi/hapi": "^18.4.0",
     "@hapi/joi": "^16.1.1",
     "babel-preset-env": "^1.7.0",
     "camelcase": "^5.3.1",
-    "cheerio": "^1.0.0-rc.3",
+    "crypto.js": "^1.3.1",
+    "dateformat": "^3.0.3",
     "dotenv": "^8.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "request-promise": "^4.2.4",
+    "rotating-file-stream": "^1.4.3"
   }
 }
