--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Jorge Antunes <jorge.antunes@academiadecodigo.org>",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_PATH=$NODE_PATH:src:. babel-node src/index.js"
+    "start": "NODE_PATH=$NODE_PATH:src:. babel-node src/index.js",
+	"hash": "babel-node utils/generate-hash.js"
   },
   "dependencies": {
     "@babel/cli": "^7.6.0",
@@ -18,13 +19,15 @@
     "@hapi/hapi": "^18.4.0",
     "@hapi/joi": "^16.1.1",
     "babel-preset-env": "^1.7.0",
+    "bcrypt": "^3.0.6",
     "camelcase": "^5.3.1",
-    "crypto.js": "^1.3.1",
     "dateformat": "^3.0.3",
     "dotenv": "^8.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
+    "hapi-auth-jwt2": "^8.6.2",
+    "jsonwebtoken": "^8.5.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "rotating-file-stream": "^1.4.3"
