created dao for user, added some seeds, still wip

--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "babel-preset-env": "^1.7.0",
     "bcrypt": "^3.0.6",
     "camelcase": "^5.3.1",
+    "chalk": "^2.4.2",
     "dateformat": "^3.0.3",
     "dotenv": "^8.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "hapi-auth-jwt2": "^8.6.2",
+    "hapi-authorization": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.4",
     "objection": "^1.6.11",
+    "promise.any": "^1.0.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "rotating-file-stream": "^1.4.3",
